--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,6 @@
     <string name="save_btn_text">Save</string>
     <string name="cancel_btn_text">Cancel</string>
     <string name="shoe_size_card_text">Size: %s US</string>
+
+    <string name="error_text">Please fill all the fields</string>
 </resources>
