--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,16 +17,16 @@
 
     <string name="shoe_list_title">Shoes List</string>
     <string name="add_new_shoe_fab_text">Add a new shoe into the list</string>
-    <string name="enter_shoe_name_hint">Enter Shoe Name/Model</string>
+    <string name="enter_shoe_name_hint_text">Enter Shoe Name/Model</string>
     <string name="shoe_detail_title">Shoe Detail</string>
     <string name="add_new_shoe_heading">Add New Shoe</string>
     <string name="shoe_name_title">Shoe Name</string>
     <string name="shoe_company_title">Shoe Company</string>
-    <string name="enter_shoe_company_hint">Enter Shoe Brand</string>
+    <string name="enter_shoe_company_hint_text">Enter Shoe Brand</string>
     <string name="shoe_size_title">Shoe Size</string>
-    <string name="enter_shoe_size_hint">Enter Your Shoe Size</string>
+    <string name="enter_shoe_size_hint_text">Enter Your Shoe Size</string>
     <string name="shoe_notes_title">Shoe Notes</string>
-    <string name="enter_shoe_note_hint">Enter Special Notes</string>
+    <string name="enter_shoe_note_hint_text">Enter Special Notes</string>
     <string name="save_btn_text">Save</string>
     <string name="cancel_btn_text">Cancel</string>
     <string name="shoe_size_card_text">Size: %s US</string>
